@@ -5,8 +5,8 @@
 
 #import <AppKit/AppKit.h>
 
-#define DragImageAlpha    		0.75
-#define MaxDragImageSize 		NSMakeSize(400, 400)
+#define WebDragStartHysteresisX			5.0
+#define WebDragStartHysteresisY			5.0
 
 @class WebView;
 
@@ -18,7 +18,18 @@
 // Returns the first WebView superview. Only works if self is the WebView's document view.
 - (WebView *)_web_parentWebView;
 
-- (BOOL)_web_dragShouldBeginFromMouseDown: (NSEvent *)mouseDownEvent withExpiration:(NSDate *)expiration;
+// returns whether a drag should begin starting with mouseDownEvent; if the time
+// passes expiration or the mouse moves less than the hysteresis before the mouseUp event,
+// returns NO, else returns YES.
+- (BOOL)_web_dragShouldBeginFromMouseDown:(NSEvent *)mouseDownEvent
+                           withExpiration:(NSDate *)expiration
+                              xHysteresis:(unsigned)xHysteresis
+                              yHysteresis:(unsigned)yHysteresis;
+
+// Calls _web_dragShouldBeginFromMouseDown:withExpiration:xHysteresis:yHysteresis: with
+// the default values for xHysteresis and yHysteresis
+- (BOOL)_web_dragShouldBeginFromMouseDown:(NSEvent *)mouseDownEvent
+                           withExpiration:(NSDate *)expiration;
 
 // Convenience method. Returns NSDragOperationCopy if _web_bestURLFromPasteboard doesn't return nil.
 // Returns NSDragOperationNone otherwise.
